objects/Billing__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Legal Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Billing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Copies__c</fullName>
        <label>Bill Copies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - No Bill</fullName>
                </value>
                <value>
                    <fullName>1 - Copy</fullName>
                </value>
                <value>
                    <fullName>2 - Copies</fullName>
                </value>
                <value>
                    <fullName>3 - Copies</fullName>
                </value>
                <value>
                    <fullName>4 - Copies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_Entity__c</fullName>
        <inlineHelpText>Please Provide The Billing Entity Number.</inlineHelpText>
        <label>Bill Entity #</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Frequency__c</fullName>
        <inlineHelpText>This Is The Frequency In Which Your Invoice Is Generated. Monthly (1) Is Most Commonly Used.</inlineHelpText>
        <label>Bill Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D DAILY</fullName>
                </value>
                <value>
                    <fullName>W WEEKLY</fullName>
                </value>
                <value>
                    <fullName>0 NON COMP HOUSED</fullName>
                </value>
                <value>
                    <fullName>1 MONTHLY</fullName>
                    <default>true</default>
                    <label>1 MONTHLY</label>
                </value>
                <value>
                    <fullName>2 ANNUAL</fullName>
                </value>
                <value>
                    <fullName>3 SEMI-ANNUAL</fullName>
                </value>
                <value>
                    <fullName>4 QUARTERLY</fullName>
                </value>
                <value>
                    <fullName>5 BI-WEEKLY</fullName>
                </value>
                <value>
                    <fullName>6 10 MONTH/SCHOOL</fullName>
                </value>
                <value>
                    <fullName>1 = most common</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_Sequence__c</fullName>
        <inlineHelpText>This Is The Order In Which Your Invoice Is Sorted. Last Name (1) Is Most Commonly Used.</inlineHelpText>
        <label>Bill Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A ALPHA/W/EMP NUM</fullName>
                </value>
                <value>
                    <fullName>B ALPHA/W/DEPT ST</fullName>
                </value>
                <value>
                    <fullName>C CERT/W/DEPT ST</fullName>
                </value>
                <value>
                    <fullName>D CERT/W/EMP NUM</fullName>
                </value>
                <value>
                    <fullName>E EMP/W/DEPT ST</fullName>
                </value>
                <value>
                    <fullName>F NAME/W/GROUP</fullName>
                </value>
                <value>
                    <fullName>0 NOT APPLICABLE</fullName>
                </value>
                <value>
                    <fullName>1 LAST NAME</fullName>
                    <default>true</default>
                    <label>1 LAST NAME</label>
                </value>
                <value>
                    <fullName>2 ALPHA/W/EMP NUM</fullName>
                </value>
                <value>
                    <fullName>3 ALPHA/W/DEPT NO</fullName>
                </value>
                <value>
                    <fullName>4 CERTIFICATE NUM</fullName>
                </value>
                <value>
                    <fullName>5 CERT/W/DEPT NO</fullName>
                </value>
                <value>
                    <fullName>6 EMPLOYEE NUMBER</fullName>
                </value>
                <value>
                    <fullName>7 EMP/NO/W/DEPT</fullName>
                </value>
                <value>
                    <fullName>8 HOME ADDRESS</fullName>
                </value>
                <value>
                    <fullName>9 ALIAS NO SEQ</fullName>
                </value>
                <value>
                    <fullName>1 = most common</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_Source__c</fullName>
        <inlineHelpText>This Represents The Type Of Billing.</inlineHelpText>
        <label>Bill Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Premium/List</fullName>
                </value>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                    <isActive>false</isActive>
                    <label>Premium</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>There Must Be A Contact Record In The System For This Search. If You Cannot Find The Name You May Need To First Create A New Contact By Clicking &apos;Contact&apos; Tab Across Top And Creating A Record.</inlineHelpText>
        <label>Billing Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Billing Entity (WGS Only)</relationshipLabel>
        <relationshipName>Billing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Specifics__c</fullName>
        <formula>&quot;If variations exist between multiple entities, please make your selections below for each one, otherwise just complete Entity 1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Specifics</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Billing_Contact_Name__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle_Code__c</fullName>
        <inlineHelpText>This Code Represents The Day Of The Month That Your Invoice Will Generate.</inlineHelpText>
        <label>Cycle Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00 NO REGULAR CYCLE BILL - OAD WILL RUN ON THE TENTH</fullName>
                </value>
                <value>
                    <fullName>01 MONTHLY CYCLE ON THE FIRST OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>02 MONTHLY CYCLE ON THE SECOND OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>03 MONTHLY CYCLE ON THE THIRD OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>04 MONTHLY CYCLE ON THE FOURTH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>05 MONTHLY CYCLE ON THE FIFTH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>06 MONTHLY CYCLE ON THE SIXTH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>07 MONTHLY CYCLE ON THE SEVENTH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>08 MONTHLY CYCLE ON THE EIGHTH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>09 MONTHLY CYCLE ON THE NINTH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>10 MONTHLY CYCLE ON THE TENTH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>11 MONTHLY CYCLE ON THE ELEVENTH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>12 MONTHLY CYCLE ON THE TWELVETH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>13 MONTHLY CYCLE ON THE THIRTEENTH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>14 MONTHLY CYCLE ON THE FOURTEENTH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>15 MONTHLY CYCLE ON THE FIFTEENTH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>16 MONTHLY CYCLE ON THE SIXTEENTH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>17 MONTHLY CYCLE ON THE SEVENTEENTH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>18 MONTHLY CYCLE ON THE EIGHTEENTH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>19 MONTHLY CYCLE ON THE NINETEENTH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>20 MONTHLY CYCLE ON THE TWENTIETH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>21 MONTHLY CYCLE ON THE TWENTY FIRST OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>22 MONTHLY CYCLE ON THE TWENTY SECOND OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>23 MONTHLY CYCLE ON THE TWENTY THIRD OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>24 MONTHLY CYCLE ON THE TWENTY FOURTH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>25 MONTHLY CYCLE ON THE TWENTY FIFTH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>26 MONTHLY CYCLE ON THE TWENTY SIXTH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>27 MONTHLY CYCLE ON THE TWENTY SEVENTH OF THE MONTH</fullName>
                </value>
                <value>
                    <fullName>28 MONTHLY CYCLE ON THE TWENTY EIGHTH OF THE MONTH</fullName>
                    <default>true</default>
                    <label>28 MONTHLY CYCLE ON THE TWENTY EIGHTH OF THE MONTH</label>
                </value>
                <value>
                    <fullName>51 BI WEEKLY CYCLE ON SUNDAY AND MONDAY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Billing_Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consolidated</fullName>
                    <default>true</default>
                    <label>Consolidated</label>
                </value>
                <value>
                    <fullName>Suffix</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>For_the_following_suffixes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>For The Following Suffixes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Funding_Master__c</fullName>
        <label>Funding</label>
        <referenceTo>Funding__c</referenceTo>
        <relationshipName>Billing_Entities1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Funding_Type_Code__c</fullName>
        <inlineHelpText>This Code Represents The Type Of Funding Arrangement.</inlineHelpText>
        <label>Funding Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A -- FI: non-refunding, regulated by DOI</fullName>
                </value>
                <value>
                    <fullName>B -- FI: refunding, regulated by DOI</fullName>
                </value>
                <value>
                    <fullName>H -- ASO/ASC: New/Existing clients with Admin Svc Contract (most common)</fullName>
                </value>
                <value>
                    <fullName>K -- JAA: New/existing clients</fullName>
                </value>
                <value>
                    <fullName>W – Anthem Balanced Funding</fullName>
                </value>
                <value>
                    <fullName>1 -- FI: non-refunding, regulated by DMHC</fullName>
                </value>
                <value>
                    <fullName>2 -- FI: refunding, regulated by DMHC</fullName>
                </value>
                <value>
                    <fullName>3 -- N/A, unless existing client w/this fund type in use, previously used for FI.</fullName>
                </value>
                <value>
                    <fullName>4 -- N/A, unless existing client w/this fund type in use, previously used for Minimum Premium.</fullName>
                </value>
                <value>
                    <fullName>5 -- N/A for National Accts</fullName>
                </value>
                <value>
                    <fullName>7 -- Minimum Premium: New/Existing clients</fullName>
                </value>
                <value>
                    <fullName>9 -- ASO: MCS clients or existing ASO clients already set up w/ this funding</fullName>
                </value>
                <value>
                    <fullName>*Use H for all new groups all states except for Fedex. H means that checks will be written on Anthem account.</fullName>
                </value>
                <value>
                    <fullName>*Use 9 if Fedex.This is the only new group where approval has been given to write checks on group&apos;s account</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grace_Days__c</fullName>
        <inlineHelpText># Of Days Before A Bill Entity Becomes Delinquent. Claims Will Not Pay If The Service Date Is After The Group&apos;s Paid To Date Plus Grace Days. Typically Ranges From 30 – 90 Days.</inlineHelpText>
        <label>Grace Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipName>Billing_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Implementation Case Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Record_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Record ID</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>Billing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_Type_Code__c</fullName>
        <inlineHelpText>This Represents How The Premium Is Received At Anthem.</inlineHelpText>
        <label>Pay Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wire Transfer</fullName>
                    <default>true</default>
                    <label>Wire Transfer</label>
                </value>
                <value>
                    <fullName>Lock Box</fullName>
                </value>
                <value>
                    <fullName>Cash/Checks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Billing_Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If All Plans Have The Same Billing Values, Indicate &quot;ALL&quot; And Just Complete Entity 1.</inlineHelpText>
        <label>Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Method_Code_RMC__c</fullName>
        <inlineHelpText>If ASO, Use 1 For All States.

If CA, CO &amp; NV And Financial Arrangement Is Other Than ASO, Assign Applicable Code Based On Financial Arrangement.</inlineHelpText>
        <label>Rate Method Code (RMC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A -- NON-GROUP</fullName>
                </value>
                <value>
                    <fullName>B -- POOL RTD EXCEPT</fullName>
                </value>
                <value>
                    <fullName>C -- POOL RTD 5-9</fullName>
                </value>
                <value>
                    <fullName>D -- POOL RTD 10-49</fullName>
                </value>
                <value>
                    <fullName>E -- POOLED PLUS EXP</fullName>
                </value>
                <value>
                    <fullName>F -- EXP RTD NONREF</fullName>
                </value>
                <value>
                    <fullName>G -- EXP RTD NONREF</fullName>
                </value>
                <value>
                    <fullName>H -- EXP RTD FROZEN</fullName>
                </value>
                <value>
                    <fullName>I -- STIP. RATE COST</fullName>
                </value>
                <value>
                    <fullName>J -- EXP RTD NONREF</fullName>
                </value>
                <value>
                    <fullName>K -- EXP RTD NONREF</fullName>
                </value>
                <value>
                    <fullName>L -- EXP RTD REFUND</fullName>
                </value>
                <value>
                    <fullName>M -- DIST XI MUTUAL</fullName>
                </value>
                <value>
                    <fullName>N -- NATIONAL EQUAL</fullName>
                </value>
                <value>
                    <fullName>P -- COST PLUS</fullName>
                </value>
                <value>
                    <fullName>R -- OTHR. SPEC RTD</fullName>
                </value>
                <value>
                    <fullName>S -- SCHOOL POOL</fullName>
                </value>
                <value>
                    <fullName>T -- MINIMUM PREMIUM</fullName>
                </value>
                <value>
                    <fullName>U -- ALT HEALTH PLAN</fullName>
                </value>
                <value>
                    <fullName>V -- MASTERLINE FROZ</fullName>
                </value>
                <value>
                    <fullName>W -- ALT HEALTH PLAN</fullName>
                </value>
                <value>
                    <fullName>Y -- UNITECH</fullName>
                </value>
                <value>
                    <fullName>Z -- FREE STD. DENT</fullName>
                </value>
                <value>
                    <fullName>1 -- ASO BUSINESS</fullName>
                </value>
                <value>
                    <fullName>2 -- STOP-LOSS BUSN</fullName>
                </value>
                <value>
                    <fullName>3 -- MINIMUM PREMIUM</fullName>
                </value>
                <value>
                    <fullName>4 -- MASTERLINE</fullName>
                </value>
                <value>
                    <fullName>5 -- RESERVED</fullName>
                </value>
                <value>
                    <fullName>7 -- HMO</fullName>
                </value>
                <value>
                    <fullName>8 -- HMO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retro_Days__c</fullName>
        <inlineHelpText>This Represents How Far Back Retro activity Can Be Processed. Varies By Region. West And SE Region, Typically 60-90 Days Central Region Typically Uses 365.</inlineHelpText>
        <label>Retro Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Billing_Contact_Name__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <formula>Billing_Contact_Name__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Billing_Contact__c</fullName>
        <formula>Billing_Contact_Name__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tolerance_Level__c</fullName>
        <defaultValue>0.008</defaultValue>
        <inlineHelpText>This Is The Minimum Percent Payment Of An Invoice Required Before The Paid To Date Is Advanced. Minimum Percent Is 80%.</inlineHelpText>
        <label>Tolerance Level %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Washout_Code_16__c</fullName>
        <formula>&quot;WASHOUT CODE = 16 Enrollment: Enrollment 1st- 15th, Premium due on 1st of the same month. Enrollment 16th-31st, premium due from 1st of next month. Contract Change: Date of events 1st- 15th, Premium due from 1st of the same month. Date of events 16th-31st, premium due from 1st of next month. Terminations: Benefits terminated 1st- 15th, Premium due on 1st of the same month. Terminated 16th-31st, premium credited from 1st of next month.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Washout Code = 16</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Washout_Code_1__c</fullName>
        <formula>&quot;WASHOUT CODE = 01 All Events: Dates of events occurring on the 1st - 31st, reflected in premium 1st of the following month.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Washout Code = 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Washout_Code_2__c</fullName>
        <formula>&quot;WASHOUT CODE = 02 Enrollment: Enrollment on 1st, Premium due on 1st of the same month. Enrollment on 2nd-31st, premium due from 1st of next month. Contract Change: Dates of events occurring on the 1st, premium for new contract type due from the 1st of same month. 2nd-31st, due next month. Terminations: Benefits terminated on 1st, premium credited from the 1st of same month. 2nd-31st, credited next month.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Washout Code = 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Washout_Code__c</fullName>
        <inlineHelpText>This Code Determines When The First Charge For A Member Is Billed Or If A Full Credit Is Generated When The Member Cancels. The System Automatically Creates Adjustments For Additions, Terminations And Contract Type Changes.</inlineHelpText>
        <label>Washout Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Code 01</fullName>
                </value>
                <value>
                    <fullName>Code 02</fullName>
                </value>
                <value>
                    <fullName>Code 16</fullName>
                    <default>true</default>
                    <label>Code 16</label>
                </value>
                <value>
                    <fullName>Code 31</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Billing_Contact_Name__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Billing Entity (WGS Only)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BILL-{000000}</displayFormat>
        <label>Billing Entity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Entity (WGS Only)</pluralLabel>
    <recordTypes>
        <fullName>Billing</fullName>
        <active>true</active>
        <label>Billing FI</label>
    </recordTypes>
    <recordTypes>
        <fullName>BillingASO</fullName>
        <active>true</active>
        <label>BillingASO</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>